--- a/css/playerinfo.css
+++ b/css/playerinfo.css
@@ -16,7 +16,7 @@ main {
 
 .container {
     background-color: rgb(216, 191, 216, 0.3);
-    height: 30vh;
+    /* height: 30vh; */
     width: 50vw;
     margin: auto;
     color: white;
@@ -52,6 +52,7 @@ select {
     background-size: 60%;
     padding: 8px 100px;
     margin-top: 20px;
+    margin-bottom: 20px;
     color: white;
     font-size: 1rem;
     font-family: "Baloo Da 2";
