--- a/css/gamerules.css
+++ b/css/gamerules.css
@@ -17,7 +17,7 @@ main {
 }
 
 .container {
-    border: solid;
+    /* border: solid; */
     height: 75vh;
     width: 75vh;
     background-image: url(../img/rules\ frame.png);
