--- a/css/gamerules.css
+++ b/css/gamerules.css
@@ -5,7 +5,7 @@
 }
 
 main {
-    border:solid;
+    /* border:solid; */
     height: 100vh;
     background-image: url(../img/space-background.jpg);
     background-repeat: no-repeat;
