--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,33 @@ main {
     flex-direction: column;
     align-items: center;
     align-content: space-between;
+    padding-top: 5vh;
     padding-bottom: 10vh;
 }
 
-#title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 5%;
-    color:rgb(204, 202, 108);
-    font-family: "Gloria Hallelujah";
-    font-size: 4rem;
-    flex-basis: 70%;
+@media only screen and (min-width:500px) {
+    #title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color:rgb(204, 202, 108);
+        font-family: "Gloria Hallelujah";
+        font-size: 4rem;
+        flex-basis: 70%;
+    }
 }
+@media only screen and (max-width:499px) {
+    #title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color:rgb(204, 202, 108);
+        font-family: "Gloria Hallelujah";
+        font-size: 2rem;
+        flex-basis: 70%;
+    }
+}
+    
 
 #title-ufo {
     background-image: url("../img/flying-saucer.png");
